<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MyApp!</string>
    <string name="app_name">Studory</string>
    <string name="title">Student Details</string>
    <string name="roll_no">Enter Rollno: </string>
    <string name="name">Enter Name: </string>
    <string name="marks">Enter Marks: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="show_info">About</string>
    <string name="regno" />
    <string name="dob">Date of Birth</string>
    <string name="type">Type of Admission</string>
    <string name="tot">12th Total Marks</string>
    <string name="mob">Mobile No.</string>
    <string name="gpa1">1st sem GPA</string>
    <string name="gpa2">2nd sem GPA</string>
    <string name="gpa3">3rd sem GPA</string>
    <string name="gpa4">4th sem GPA</string>
    <string name="gpa5">5h sem GPA</string>
    <string name="famob">Father\'s Mobile no.</string>
    <string name="mamob">Mother\'s Mobile No.</string>
    <string name="cgpa">CGPA.</string>
    <string name="registno">Enter Register no.</string>
    <string name="name1">Name</string>
    <string name="board">Board</string>
    <string name="cut">12th Cut Off</string>
    <string name="splash">Information Technology \n Student Database</string>
    <string name="splashtext">Information Technology \n Student Database</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_insert">Insert</string>
    <string name="title_activity_auth">Auth</string>

</resources>